# candy-machine-program

./: .note  Anchor.toml  cache.json  config.json
programs/candy-machine-program/: Cargo.toml
programs/candy-machine-program/src/: lib.rs
programs/candy-machine-program/src/processor/: mint.rs
tests/: candy-machine-program.ts
