[package]
name = "candy-machine-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "candy_machine_program"

[features]
no-entrypoint = []
no-idl = []
test-bpf = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
arrayref = "0.3.6"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.5", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.5", features = [
  "no-entrypoint",
] }
anchor-spl = "0.25.0"
solana-program = "1.10"
solana-gateway = "0.2.0"

[dev-dependencies]
solana-program-test = "1.10"
solana-sdk = "~1.10"
anchor-client = "0.25.0"
borsh = "~0.9.2"
tarpc = "0.29.0"
console = "0.15.1"

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
